deploy/pulumi/src/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-root
  namespace: rnd
  labels:
    www: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
  - hosts:
    - rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: rnd.lvh.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: rnd
  labels:
    www: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
  - hosts:
    - rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: rnd.lvh.me
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adminer
  namespace: rnd
  labels:
    www: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
  - hosts:
    - adminer.rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: adminer.rnd.lvh.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminer
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mailhog
  namespace: rnd
  labels:
    www: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
  - hosts:
    - mailhog.rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: mailhog.rnd.lvh.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailhog
            port:
              number: 8025
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kowl
  namespace: rnd
  labels:
    www: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
  - hosts:
    - kowl.rnd.lvh.me
    secretName: selfsigned-root-secret
  rules:
  - host: kowl.rnd.lvh.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kowl
            port:
              number: 8080
